# KWStyle

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  DartConfig.cmake  ITK.kws.xml  KWStyleConfigure.h.in  README.md  circle.yml  index.html  kitware.css  kwsCheckBadCharacters.cxx  kwsCheckBlackList.cxx  kwsCheckComma.cxx  kwsCheckComments.cxx  kwsCheckDeclarationOrder.cxx  kwsCheckEmptyLines.cxx  kwsCheckEndOfFileNewLine.cxx  kwsCheckExtraSpaces.cxx  kwsCheckFunctions.cxx  kwsCheckHeader.cxx  kwsCheckIfNDefDefine.cxx  kwsCheckIfWhileForUntil.cxx  kwsCheckIndent.cxx  kwsCheckInternalVariables.cxx  kwsCheckLineLength.cxx  kwsCheckMemberFunctions.cxx  kwsCheckNameOfClass.cxx  kwsCheckNamespace.cxx  kwsCheckOperator.cxx  kwsCheckParenthesis.cxx  kwsCheckRelativePathInInclude.cxx  kwsCheckSemicolonSpace.cxx  kwsCheckStatementPerLine.cxx  kwsCheckStruct.cxx  kwsCheckTabs.cxx  kwsCheckTemplate.cxx  kwsCheckTypedefs.cxx  kwsCheckUsingDirectives.cxx  (+18 more)
CMake/ExportConfiguration/: CMakeLists.txt  KWStyleConfig.cmake.in  UseKWStyle.cmake
Documentation/: BlackListCmake.txt  directories.txt  logo-medium.psd  logo-small.psd  logo.psd
Documentation/Install/: ITK.kws.xml  VTK.kws.xml
SpryAssets/: SpryData.js  SpryEffects.js  SpryMenuBarHorizontal.css  SpryTabbedPanels.css  SpryTabbedPanels.js  xpath.js
SpryAssets/_notes/.svn/: all-wcprops  dir-prop-base  entries
SpryAssets/_notes/.svn/text-base/: dwsync.xml.svn-base
Testing/: CMakeLists.txt  KWStyleTests.cxx  itkTestMain.h  kwsBadCharactersTest.cxx  kwsIndentTest.cxx  kwsRunKWStyleTest.cxx  kwsSemiColonSpaceTest.cxx  kwsStatementPerLineTest.cxx  kwsSwitchCaseTest.cxx  kwsTestMain.h  kwsVariablePerLineTest.cxx
Testing/Data/: 0001-KWStyleConfiguration.kws.xml  0001-test.cpp  10872-KWStyleConfiguration.kws.xml  10872-test.cxx  4204-output.xml  4204-test.cpp  4227-output.xml  4227-test.cpp  4259-output.xml  4259-test.cpp  4260-KWStyleConfiguration.kws.xml  4260-output.xml  4260-test.cpp  4262-test.cpp  4296-KWStyleConfiguration.kws.xml  4296-test.h  4297-test.cpp  4301-test.cpp  4302-KWStyleConfiguration.kws.xml  4302-test.cpp  4303-test.cpp  4316-output.xml  4316-test.cpp  4317-test.cpp  4318-KWStyleConfiguration.kws.xml  4318-test.cpp  4319-test.cpp  4327-test.cpp  4344-test.cpp  4345-output.xml  4345-test.cpp  4518-test.h  4531-test.h  4549-KWStyleConfiguration.kws.xml  4549-output.xml  4549-test.h  5031-KWStyleConfiguration.kws.xml  5031-output.xml  5031-test.cpp  5032-test.h  (+25 more)
Testing/Docker/: Dockerfile  build.sh  run.sh  test.sh
Utilities/: CMakeLists.txt  boostLibs.txt  update-kwsys.bash  update-third-party.bash  updateBoost.sh
Utilities/KWSys/: Base64.c  Base64.h.in  CMakeLists.txt  CTestConfig.cmake  CommandLineArguments.cxx  CommandLineArguments.hxx.in  Configure.h.in  Configure.hxx.in  Copyright.txt  Directory.cxx  Directory.hxx.in  DynamicLoader.cxx  DynamicLoader.hxx.in  Encoding.h.in  Encoding.hxx.in  EncodingC.c  EncodingCXX.cxx  FStream.cxx  FStream.hxx.in  Glob.cxx  Glob.hxx.in  IOStream.cxx  IOStream.hxx.in  MD5.c  MD5.h.in  Process.h.in  ProcessUNIX.c  ProcessWin32.c  RegularExpression.cxx  RegularExpression.hxx.in  SharedForward.h.in  String.c  String.h.in  String.hxx.in  System.c  System.h.in  SystemInformation.cxx  SystemInformation.hxx.in  SystemTools.cxx  SystemTools.hxx.in  (+29 more)
Utilities/boost/: README-KWStyle.txt  concept_check.hpp  none.hpp  readme.txt  static_assert.hpp  throw_exception.hpp
Utilities/boost/fusion/support/detail/: result_of.hpp
Utilities/boost/mpl/: assert.hpp
Utilities/boost/optional/: optional.hpp
Utilities/boost/proto/: eval.hpp  expr.hpp  generate.hpp  matches.hpp  traits.hpp
Utilities/boost/range/: iterator_range_core.hpp
Utilities/boost/utility/: base_from_member.hpp
Utilities/boost/xpressive/: sub_match.hpp
Utilities/boost/xpressive/detail/core/: state.hpp  sub_match_vector.hpp
Utilities/boost/xpressive/detail/dynamic/: parse_charset.hpp  parser_traits.hpp
Utilities/boost/xpressive/detail/utility/: boyer_moore.hpp  sequence_stack.hpp
Web/: CMake.kws.xml  CMakeFiles.txt  IGSTK.kws.xml  IGSTKFiles.txt  IGSTKOverwrite.txt  ITK.kws.xml  ITKFiles.txt  ITKOverwrite.txt  ITKReview.kws.xml  ITKReviewFiles.txt  SOViewer.kws.xml  SOViewerFiles.txt  SandboxFiles.txt  SandboxOverwrite.txt  VTK.kws.xml  VTKFiles.txt  VTKOverwrite.txt  default.css  index.php  kwstyle.php
Web/ctests/: Build.xsl  KWStyle-CMake.cmake  KWStyle-IGSTK.cmake  KWStyle-IGSTKSandbox.cmake  KWStyle-ITK-Nightly.cmake  KWStyle-ITK-Review-Experimental.cmake  KWStyle-ITK-Review.cmake  KWStyle-ITK.cmake  KWStyle-SOViewer.cmake  KWStyle-VTK.cmake  KWStyle-itkUNC.cmake
Web/headers/: CMakeHeader.h  IGSTKHeader.h  KitwareHeader.h  SOVHeader.h  VTKHeader.h
Web/headers/IGSTKSandbox/: IGSTKHeader2.h
help/: help.html
project/: about.html  contactus.html  license.html  parti.html  project.html
resources/: KWStyle-MyProject.cmake  MyConfiguration.kws.xml  MyFilesToCheck.txt  RulesOverwrite.txt  documentation.html  features.html  resources.html
